# mlops-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
baseline/: metrics.json
config/: config.yaml  config_test.yaml
dags/: __init__.py  yolo_training_pipeline.py
data/raw/: eda_metadata.csv  pose.dvc
docs/: lab3_hpo_theory.md
evaluation/pose/: orientation_results.json
notebooks/: 01_eda.ipynb
scripts/: ci_train.py  compare_metrics.py  generate_report.py
src/: config.py  data.py  optimize.py  prepare.py  setup_colab.py  tracking.py  train.py
src/evaluate/: evaluate_orientation.py
tasks/: 1.md  2.md  3.md  4.md  5.md
tasks/docs/: lab3_hpo_theory.md  lab4_cicd_theory.md  lab5_orchestration_theory.md
tests/: conftest.py  test_artifacts.py  test_config.py  test_dag.py  test_data.py
