[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dvc>=3.66.1",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "python-dotenv>=1.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.19",
    "prefect>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "pretrain: pre-train tests (data, config validation)",
    "posttrain: post-train tests (artifacts, quality gate)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "scripts", "tests", "dags"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
